# typehero

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  practice_problems.json  uninstall.sh
.claude/: settings.local.json
.codex/environments/: environment.toml
.github/workflows/: pages.yml  release.yml
code-samples/: problem-statements.json
code-samples/solutions/: problem-1.js  problem-10.js  problem-100.go  problem-11.ts  problem-12.py  problem-13.js  problem-14.ts  problem-15.js  problem-16.rs  problem-17.ts  problem-18.py  problem-19.go  problem-2.py  problem-20.rs  problem-21.js  problem-22.ts  problem-23.py  problem-24.js  problem-25.ts  problem-26.rs  problem-27.go  problem-28.py  problem-29.js  problem-3.ts  problem-30.ts  problem-31.js  problem-32.ts  problem-33.js  problem-34.ts  problem-35.js  problem-36.py  problem-37.go  problem-38.rs  problem-39.js  problem-4.js  problem-40.ts  problem-41.py  problem-42.js  problem-43.ts  problem-44.js  (+59 more)
examples/: spinner_demo.rs  worm_spinner  worm_spinner.rs
plans/: code-review-2026-01-30.md
site/: next.config.ts  package-lock.json  package.json
site/src/app/: globals.css  layout.tsx  page.tsx
site/src/components/layout/: Header.tsx
site/src/components/ui/: TerminalWindow.tsx
site/src/lib/: constants.ts
src/: code_challenge.rs  display.rs  engine.rs  exercises.rs  guided_v2.rs  input.rs  main.rs  stats.rs
